Prevent small boxes on a custom page from showing a scrollbar

--- a/src/BloomBrowserUI/bookEdit/css/origami.css
+++ b/src/BloomBrowserUI/bookEdit/css/origami.css
@@ -134,6 +134,7 @@
   height: 100%;
   padding: 2px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 /*the commented line below would also add it to an empty bloom-content1 for re-entry to layout mode*/
 /*but that would be problematic/confusing in a multilingual context*/
